--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -27,7 +27,7 @@
 
 
 
-        <div class="adsBanner home-banner-block">
+        <div class="adsBanner home-banner-block" v-if="role === 2">
             <div class="slideshow-container" v-if="bannerImages.length > 0">
 
                 <!-- Full-width images with number and caption text -->
